updated Firefox package, fixed host install bugs

--- a/Firefox/_locales/de/messages.json
+++ b/Firefox/_locales/de/messages.json
@@ -24,6 +24,11 @@
     "description": "Display while waiting for responses"
   },
 
+  "htmlError": {
+    "message": "Das hat leider nicht geklappt",
+    "description": "The popup returned an error"
+  },
+
   "htmlCancel": {
     "message": "Abbrechen (Esc geht auch)",
     "description": "Popup window Cancel link"
