Added source info to popup window

--- a/Firefox/_locales/en/messages.json
+++ b/Firefox/_locales/en/messages.json
@@ -19,6 +19,11 @@
     "description": "Popup window header text"
   },
 
+  "htmlSource": {
+    "message": "Source: ",
+    "description": "Inform about data source."
+  },
+
   "htmlWaiting": {
     "message": "Waiting for responses",
     "description": "Display while waiting for responses"
