--- a/Firefox/_locales/de/messages.json
+++ b/Firefox/_locales/de/messages.json
@@ -19,6 +19,11 @@
     "description": "Popup window <h3> header"
   },
 
+  "htmlSource": {
+    "message": "Quelle: ",
+    "description": "Inform about data source."
+  },
+
   "htmlWaiting": {
     "message": "Warte auf Antworten",
     "description": "Display while waiting for responses"
