--- a/Chrome/_locales/en/messages.json
+++ b/Chrome/_locales/en/messages.json
@@ -1,14 +1,4 @@
 {
-  "extensionName": {
-    "message": "Railduino Zeroconf Lookup",
-    "description": "Name of the extension."
-  },
-
-  "extensionAbbrev": {
-    "message": "Railduino",
-    "description": "Short name of the extension."
-  },
-
   "extensionDescription": {
     "message": "Find HTTP Servers in the .local domain using Zeroconf",
     "description": "Description of the extension."
@@ -22,6 +12,11 @@
   "htmlHeader": {
     "message": "Local HTTP Servers",
     "description": "Popup window header text"
+  },
+
+  "htmlSource": {
+    "message": "Source: ",
+    "description": "Inform about data source."
   },
 
   "htmlWaiting": {
